assets/css/main.css
@import "~/node_modules/bootstrap/dist/css/bootstrap.min.css";
@import "footer";
@import "index";
@import "menu";
@import "description";

body {
    font-family:sans-serif;
    font: size 13px;   
    color: #000000;
    line-height:30px;
    padding-top: 56px; 
    -webkit-font-smoothing:antialiased;
    -moz-osx-font-smoothing:grayscale;
    overflow-x:hidden;
    background-color:#efefef;
    box-sizing: border-box;
}
section {
    width: 100%;
    display:inline-block;
      }
  *{
    padding:0px;
    margin:0px;
}
p {
    text-align:justify;
    font-size:20px;
    line-height:30px;
    padding-bottom:20px
}
.row.home-sections {
    margin-left: auto;
}

.section.approach.aos-init.aos-animate.data-aos {
    background-color:#060927
}
.container {
    max-width: 1440px;
  }
.left-aligned { 
    margin-left: auto; 
}

#content-main {
    padding-top: 30px;
  }

.bg-dark { background-color: #efefee !important; }
.bg-hero { background-color: #45b06cff; }
.bg-section {
    background: url(https://placehold.co/1920x500) 50% no-repeat;
      background-size: auto;
    background-size: cover; 
    height: 700px;
    padding: 80px 0;}

.bg .header-text {
    position: absolute;
    font-size: 30px;
    left: 50%;
    top: 45%;
    transform: translateY(-50%);
    transform: translateX(-50%);
    color: white;
}

@media screen and (max-width: 990px) {
    #section-nav {
        display: none;
    }
}

@media (min-width:768px) and (max-width:1180px) {
    .bg .header-text {
      left:220px;
      font-size:50px;
      transform:translateX(0)
    }
  }

@media screen and (min-width: 1180px) {
    .bg .header-text  {
        left: 220px;
        font-size:60px; 
        transform:translateX(0) 
    }
}
.bg {
    position: relative;
    width: 100%;
    height: 40vh;
  }

.header-content {
    margin-top: 3.5rem;
}

/* CALLOUT */
.bd-callout { padding:1.25rem; margin-top:1.25rem; margin-bottom:1.25rem; border:1px solid #e9ecef; border-left-width:.25rem; border-radius:.25rem }
.bd-callout h4 { margin-bottom:.25rem }
.bd-callout p:last-child { margin-bottom:0 }
.bd-callout code { border-radius:.25rem }
.bd-callout+.bd-callout { margin-top:-.25rem }
.bd-callout-info { border-left-color:#5bc0de }
.bd-callout-warning { border-left-color:#f0ad4e }
.bd-callout-danger { border-left-color:#d9534f }

/* Pema's code */

.list-unstyled {
    padding-left: 0;
    list-style: none;
}

.bold-italic {
    font-weight: bold;
    font-style: normal;
    color: rgb(0, 97, 155);
}

.underlined {
    text-decoration: underline;
}
#section-nav {
    padding-left:0;
    margin-top:40px;
    margin-bottom:40px;
    display:none
  }
@media(min-width:992px) {
#section-nav {
    display:block;
}
}
#section-nav {
    position: -webkit-sticky;
    position: sticky;
    top: 60px;
    margin-top: 40px;
    height: calc(100vh - 60px);
    padding: 10px;
    overflow-y: auto;
}
.section-nav-header {
    font-size: 20px;
    font-weight: bold;
    color: rgb(0, 97, 155);
}
.sticky a {
    font-size: 20px;
    text-decoration: none;
    color: rgba(0,97,155,1);
    transition: all .5s ease-in-out;
    line-height: 40px;
    display: block;
}

/* Not working currently */
.sticky a:hover,
.sticky a:focus {
    color: #666;
}

.sticky li.active > a {
    color: #f2765d;
    font-weight: 500;
}

